sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/Inventory_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Item</label>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>