sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Batch_Item__c.field-meta.xml
<CustomField>
    <fullName>Batch_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the inventory must belong to a batch</description>
    <inlineHelpText>When checked the inventory location must have a batch assigned</inlineHelpText>
    <label>Batch Item</label>
    <type>Checkbox</type>
</CustomField>