sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/BOM_Count__c.field-meta.xml
<CustomField>
    <fullName>BOM_Count__c</fullName>
    <label>BOM Count</label>
    <summaryForeignKey>Inventory_Item_BOM__c.Parent_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>