sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Commodity_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code_Type__c</fullName>
    <formula>Item_Group__r.Commodity_Code__c</formula>
    <label>Commodity Code Type</label>
    <type>Text</type>
</CustomField>