sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>