sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <summarizedField>Inventory_Item_Location__c.Count__c</summarizedField>
    <summaryForeignKey>Inventory_Item_Location__c.Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>