sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Count_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Count_Frequency__c</fullName>
    <label>Count Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>