sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Count_of_non_empty_Recipes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_non_empty_Recipes__c</fullName>
    <label>Count of non-empty Recipes</label>
    <summaryFilterItems>
        <field>Inventory_Item_Recipe__c.Count_of_Items__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Item_Recipe__c.Parent_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>