sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Currency_Config__c.field-meta.xml
<CustomField>
    <fullName>Currency_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>