sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Default_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_Location__c</fullName>
    <label>Default Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>