sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Default_Site__c.field-meta.xml
<CustomField>
    <fullName>Default_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Site</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>