sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Delete_Zero_Qty_Locations__c.field-meta.xml
<CustomField>
    <fullName>Delete_Zero_Qty_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Zero Qty Locations</label>
    <type>Checkbox</type>
</CustomField>