sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Gross_Inventory_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Inventory_Value__c</fullName>
    <description>Gross Inventory Stock Value</description>
    <formula>Inventory_Stock__c * unit_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Inventory Stock Value</inlineHelpText>
    <label>Gross Inventory Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>