sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Has_BOM__c.field-meta.xml
<CustomField>
    <fullName>Has_BOM__c</fullName>
    <formula>OR(
  BOM_Count__c  &gt; 0,
  Count_of_non_empty_Recipes__c &gt; 0
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has BOM</label>
    <type>Checkbox</type>
</CustomField>