sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Inventory_Item_Specification__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Specification__c</fullName>
    <inlineHelpText>an item listed in an inventory item</inlineHelpText>
    <label>Inventory Item Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>