sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Inventory_Stock__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Stock__c</fullName>
    <inlineHelpText>Count of items in stock In all locations</inlineHelpText>
    <label>Inventory Stock</label>
    <summarizedField>Inventory_Item_Location__c.Location_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Item_Location__c.Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>