sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Inventory Items (Inventory UoM)</relationshipLabel>
    <relationshipName>Inventory_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>