sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/is_QOH_below_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>is_QOH_below_Minimum_Quantity__c</fullName>
    <formula>Inventory_Stock__c  &lt;=  Minimum_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is QOH below Minimum Quantity?</label>
    <type>Checkbox</type>
</CustomField>