sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/is_QOH_below_Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>is_QOH_below_Reorder_Point__c</fullName>
    <formula>Inventory_Stock__c  &lt;=  Reorder_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is QOH below Reorder Point?</label>
    <type>Checkbox</type>
</CustomField>