sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Is_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Product</label>
    <type>Checkbox</type>
</CustomField>