sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Commodity Code</label>
    <referenceTo>Inventory_Item_Group__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>