sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Item_Source__c.field-meta.xml
<CustomField>
    <fullName>Item_Source__c</fullName>
    <label>Item Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Manufactured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>