sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Defines how the item is accounted for. Stock items hit inventory journals indirect items are expensed</description>
    <inlineHelpText>Defines how the item is accounted for. Stock items hit inventory journals indirect items are expensed</inlineHelpText>
    <label>Item Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Non Stock</fullName>
                <default>true</default>
                <label>Non Stock</label>
            </value>
            <value>
                <fullName>One-Off</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>