sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/lead_time__c.field-meta.xml
<CustomField>
    <fullName>lead_time__c</fullName>
    <label>lead time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>