sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Location_Count__c</fullName>
    <description>Counts the number of locations for an Item</description>
    <inlineHelpText>Rollup that Counts the number of locations for an Item</inlineHelpText>
    <label>Location Count</label>
    <summaryForeignKey>Inventory_Item_Location__c.Inventory_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>