sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Max_Storage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Storage_Capacity__c</fullName>
    <label>Max Storage Capacity</label>
    <summarizedField>Inventory_Item_Location__c.Max_Location_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Item_Location__c.Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>