sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestones</label>
    <referenceTo>rstk__somile__c</referenceTo>
    <relationshipLabel>Inventory Items (Milestones)</relationshipLabel>
    <relationshipName>Inventory_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>