sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Pending_Replenishment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Replenishment_Quantity__c</fullName>
    <label>Pending Replenishment Quantity</label>
    <summarizedField>Inventory_Replenishment_Tracker__c.Quantity_Pending__c</summarizedField>
    <summaryFilterItems>
        <field>Inventory_Replenishment_Tracker__c.Status__c</field>
        <operation>equals</operation>
        <value>Planned, Firmed, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Replenishment_Tracker__c.Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>