sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Planning_Policy__c.field-meta.xml
<CustomField>
    <fullName>Planning_Policy__c</fullName>
    <label>Planning Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reorder Point</fullName>
            </value>
            <value>
                <fullName>No MRP Planning</fullName>
            </value>
            <value>
                <fullName>Lot for Lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>