sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Receipt_UoM__c.field-meta.xml
<CustomField>
    <fullName>Receipt_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receipt UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>