sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Reorder_Level_Variance__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level_Variance__c</fullName>
    <description>Variance from re-order point</description>
    <formula>(Inventory_Stock__c -  Reorder_Point__c )/ Reorder_Point__c</formula>
    <inlineHelpText>Variance from re-order point</inlineHelpText>
    <label>Reorder Level Variance(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>