sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <label>Reorder Point</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>