sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Requires_Replenishment__c.field-meta.xml
<CustomField>
    <fullName>Requires_Replenishment__c</fullName>
    <formula>AND(
   (Inventory_Stock__c + Pending_Replenishment_Quantity__c) &lt;  Reorder_Point__c ,
    ISPICKVAL(Planning_Policy__c, &quot;Reorder Point&quot;),
    OR(
       ISPICKVAL( Item_Source__c, &quot;Purchased&quot;),
       ISPICKVAL( Item_Source__c, &quot;Manufactured&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Replenishment</label>
    <type>Checkbox</type>
</CustomField>