sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/Responsible_Department__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsible Department</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>FFA_Config_Object__c.Teamlead__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>Dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Inventory Items (Responsible Department)</relationshipLabel>
    <relationshipName>Inventory_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>