sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/unit_cost__c.field-meta.xml
<CustomField>
    <fullName>unit_cost__c</fullName>
    <label>unit cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>