sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/UoM_conversion_factor__c.field-meta.xml
<CustomField>
    <fullName>UoM_conversion_factor__c</fullName>
    <label>UoM conversion factor</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>