sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/fields/WO_Receipt_Variance_Acceptable__c.field-meta.xml
<CustomField>
    <fullName>WO_Receipt_Variance_Acceptable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Work Order Receipt Variance is Acceptable</description>
    <inlineHelpText>Check if Work Order Receipt Variance is Acceptable</inlineHelpText>
    <label>WO Receipt Variance Acceptable</label>
    <type>Checkbox</type>
</CustomField>