sfSandBoxCode/force-app/main/default/objects/Inventory_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <columns>Item_Company__c</columns>
    <columns>Inventory_Stock__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Inventory_UoM__c</columns>
    <columns>Item_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>